--- a/linux/深入理解linux内核/01绪论.md
+++ b/linux/深入理解linux内核/01绪论.md
@@ -28,3 +28,79 @@
 
 ## 2. 硬件的依赖性
 
+linux试图在硬件无关的源代码与硬件相关的源代码之间保持清晰的界限.在arch和include目录下包含了23个子目录,以对应liunx所支持的不同硬件平台.
+
+* alpha:hp的Alpha工作站
+* arm,arm26:基于arm处理器的计算机
+* cris
+* frv:基于fujitsu FR-V 系列微处理器的嵌入式系统
+* h8300:Hitachi h8/300
+* i386:基于80X86微处理器的IBM兼容个人计算机
+* ia64:基于64位Itanium微处理器的工作站
+* m32r:基于Renesas M32R系列微处理器的计算机
+* m68k,m68knommu:基于Motorola MC680x0微处理器的个人计算机
+* mips:基于MIPS微处理器的工作站
+* parisc:基于HP公司9000 PA-RISC微处理器的工作站
+* ppc,ppc64:基于mototola-IBM powerPC 32位和64位微处理器的工作站
+* s390 IBM ESA/390 及zSeries大型机
+* sh,sh64
+* sparc,sparc64
+* um:用户态的linux,一个允许开发者在用户态下运行内核的虚拟平台
+* V850
+* x86_64:基于AMD的64微处理器的工作站
+
+## 3. linux版本
+
+​	2.5 版本以前，三个数字描述，圆点分割，前两个表示版本号，第三个表示发布号。第一位版本号从1996年就没有变过。第二位版本号表示内核的类型，为偶数表示稳定的内核，否则为开发中的内核
+
+​	2.6版本的编号方式发生了很大的变化，第二个数字不再用于表示一个内核是否稳定
+
+## 4. 操作系统基本概念
+
+操作系统最重要的程序成为内核。操作系统启动时，内核被装入到RAM中，内核中包含了系统运行所必不可少的很多核心进程。
+
+操作系统必须完成的两个主要指标
+
+1. 与硬件部分交互
+2. 为运行在计算机系统上的应用程序提供执行环境
+
+硬件为CPU引入了至少两种不同的执行模式:
+
+1. 用户程序的非特权模式(用户态)
+2. 内核的特权模式(内核态)
+### 多用户系统
+
+多用戶系統就是一台能并发和独立地执行分别属于两个或者多个用户的若干应用程序的计算机.**并发**意味着几个应用程序能同时处于活动状态该并竞争各种资源,如CPU,内存,硬盘等等.
+
+多用户操作系统必须包含的特点：
+
+1. 核实用户身份的认证机制
+
+2. 防止有错误的用户程序妨碍其他应用程序正在系统中运行的保护机制
+
+3. 防止有恶意的用户程序干扰或窥视其他用户的活动的保护机制
+
+4. 限制分配给每个用户的资源数的记账机制
+
+### 用户和组
+
+所有的用户都有一个唯一的数字来标识，这个数字叫用户标识。
+
+### 进程
+
+程序执行时的一个实例
+
+### 内核体系结构
+
+1. 单块结构：每个内核层都被集成到整个内核程序中，并代表当前进程在内核态下运行。
+
+2. 微内核：内核有一个很小的函数集，通常包括几个同步原语，一个简单的调度程序和进程通信机制。
+
+微内核一般比单块内核效率低,因为操作系统不同城市之间显示的信息传递要花费一定的代价
+
+## 5. unix文件系统概述
+
+
+
+
+
