--- a/work/2019/1118-1123.md
+++ b/work/2019/1118-1123.md
@@ -7,7 +7,33 @@
 # 1119
 
 1. 自我游成本价日历定时任务测试
+
 2. 自我游成本价日历清理缓存
+
 3. 小程序优化消息修改
+
 4. 用户路径评审
-5. 
+
+5. 协助导出数据 + 卡券购买
+
+# 1120
+
+1. 渠道跟踪链接承载页数据统计(访问次数+访问人数,分享次数,分享人数)
+
+2. 卡券回收处理
+
+3. 基础研发消息分析 + 核销流程整理分析
+
+4. 协助导出数据
+
+5. 小程序优化小改动
+
+# 1121
+
+1. 渠道跟踪链接活动页数据统计(70%)
+
+2. 其他版本协助处理
+
+# 1122 
+1. 卡券过期数据,红包过期数据
+2. 
