--- a/work/2019/1118-1123.md
+++ b/work/2019/1118-1123.md
@@ -30,10 +30,15 @@
 
 # 1121
 
-1. 渠道跟踪链接活动页数据统计(70%)
+1. 渠道跟踪链接活动页数据统计(60%)
 
 2. 其他版本协助处理
 
 # 1122 
 1. 卡券过期数据,红包过期数据
-2. 
+2. h5数据统计
+
+# 1123
+1. 渠道跟踪链接数据统计
+2. 自我游协助
+
