--- a/work/2019/1125-1130.md
+++ b/work/2019/1125-1130.md
@@ -5,10 +5,40 @@
 
 # 1126
 
-1. 开放搜索修改
+1. 开放搜索修改(撤回)
 
 2. 渠道优化数据库评审,数据库修改
 
 3. 渠道优化排期
 
-   
+4. 开放搜索卡券推送数据修改\
+
+# 1127
+
+1. 活动承载页h5 访问次数+访问人数
+2. 慢日志sql优化,测试
+3. mq消息问题检查
+4. 营销活动页数据统计(获取卡片数,兑换数量,中奖次数,中奖人数,会员卡开通数,会员卡领取数)
+
+# 1128
+
+1.  活动承载页(开通会员支付金额  会员开通会员支付金额 )
+2. 整理渠道优化需求
+3. 自我游定时查询卡券下架接口
+4. 缓存mq没发送修改
+5. 协助导出数据
+
+# 1129
+
+1. 活动渠道需求整理,讨论
+
+2. 增加业务枚举表
+
+3. 卡密回收修改
+
+# 1130
+
+1. sql优化,数据导出
+2. 分销渠道核销人数统计
+3. 渠道需求分析
+4. 渠道分销数据页面接口(30%)
