--- a/work/sql/魏星/礼包卡券.md
+++ b/work/sql/魏星/礼包卡券.md
@@ -1,18 +1,9 @@
-## 门店卡券
 ```sql
 select 
  a.shopName 商家名称,
  a.uqCode 店铺id,
  b.cardName 卡券名称,
- c.stockTotal 总库存,
- COUNT(DISTINCT if(d.receiveTime > 0,d.receiveId,null)) 已领取,
- COUNT(DISTINCT if(d.surplusCnt < d.receiveCnt,d.receiveId,null)) 已核销,
- COUNT(DISTINCT if(d.state = 5 and d.refund = 2,d.receiveId,null)) 已退款,
- COUNT(DISTINCT if(d.state = 5 and d.refund = 2 and g.refundType=1,d.receiveId,null)) 用户主动退款,
- COUNT(DISTINCT if(d.state = 5 and d.refund = 2 and g.refundType!=1,d.receiveId,null)) 其他退款,
- COUNT(DISTINCT if(d.state = 4,d.receiveId,null)) 已过期,
- c.stockTotal - COUNT(DISTINCT if(d.receiveTime > 0,d.receiveId,null))  '剩余库存(没有加上已退款的)',
- c.stockTotal - COUNT(DISTINCT if(d.receiveTime > 0,d.receiveId,null)) + COUNT(DISTINCT if(d.state = 5 and d.refund = 2,d.receiveId,null))  '实际剩余库存',
+
  case b.state 
   when 1 then '草稿'
   when 2 then '待商家确认'
@@ -37,16 +28,49 @@ END as 卡券类型,
 FROM_UNIXTIME(c.startTime/1000,'%Y-%m-%d %H:%i:%S') 卡券有效期（开始时间）,
 FROM_UNIXTIME(c.endTime/1000,'%Y-%m-%d %H:%i:%S') 卡券有效期（结束时间）,
 f.realName 创建人,
-FROM_UNIXTIME(b.ctime/1000,'%Y-%m-%d %H:%i:%S') 创建时间
+FROM_UNIXTIME(b.ctime/1000,'%Y-%m-%d %H:%i:%S') 创建时间,
+COUNT(DISTINCT g.shopId) 适用门店数量,
+GROUP_CONCAT(DISTINCT CONCAT(d.location,d.address)) 地址
 
 from shop a 
 LEFT JOIN card_voucher b on a.shopId=b.shopId
 LEFT JOIN card_voucher_detail c on b.cardId=c.cardId and b.cardDetailId=c.detailId
-LEFT JOIN card_code_receive d on b.cardId=d.cardId
 LEFT JOIN sys_user f on b.suId=f.suId
-left join jkb_vip_core.order_refund g on d.orderId=g.orderId
- where b.cardName is not null
+LEFT JOIN card_shop g on g.cardId=b.cardId and g.state in(1,2,3)
+LEFT JOIN shop d on g.shopId=d.shopId
+ where b.cardName is not null and b.cardStyle=1 and b.state = 3
 GROUP BY a.shopId,b.cardId
 
+
+```
+
+```sql
+SELECT 
+a.actSn 活动id,
+COUNT(DISTINCT c.shopId) 适用门店数量,
+GROUP_CONCAT(DISTINCT CONCAT(d.location,d.address)) 地址
+
+from activity a
+INNER JOIN activity_card b on a.actId=b.actId and b.state=1
+LEFT JOIN card_shop c on c.cardId=b.cardId and c.state in(1,2,3)
+LEFT JOIN shop d on c.shopId=d.shopId
+where a.actSn in 
+("act_BxAT9e0Ii6H",
+"act_eZnjqxSpjbR",
+"act_vzMjM3YaGZ1",
+"act_1SB2T5TeoTz",
+"act_0fQD2vJ4dEc",
+"act_KjXBUgkbZDk",
+"act_DzIfPMZLvtW",
+"act_XsdLSWtKn91",
+"act_eKyfnC4peRk",
+"act_iei7zEcL980",
+"act_P6nF9tOA2dU",
+"act_9NTyV1Drx9r",
+"act_UFh1xHOITez",
+"act_NaZX0KCKUz0",
+"act_PxJRWgXJIYB",
+"act_5PEYRa5BPhH")
+GROUP BY a.actSn
 ```
 
