--- a/quartz/1.md
+++ b/quartz/1.md
@@ -1,10 +1,22 @@
 ## quartz
 
-### 概念
-1. Job 任务
-2. Trigger 触发器
-3. Scheduler 调度
+quartz调度一个任务的主要包括四个流程:
 
+1. 继承Job类,实现execute方法,方法体就是任务执行的内容
+2. 使用JobDetail包装job类(任务是有可能并发执行，如果Scheduler直接使用Job，就会存在对同一个Job实例并发访问的问题。而JobDetail & Job 方式，Sheduler每次执行，都会根据JobDetail创建一个新的Job实例，这样就可以规避并发访问的问题)
+3. 实例化一个trigger类,用于配置触发任务的参数
+4. 实例化调度器调度任务
+
+下面是一个简单的demo:
+```java
+@Slf4j
+public class SimpleJob implements Job {
+    @Override
+    public void execute(JobExecutionContext context) throws JobExecutionException {
+        log.info("一个简单的任务正在执行中");
+    }
+}
+```
 ```java
 public class Test01SimpleJob {
     private static Scheduler scheduler;
@@ -38,13 +50,61 @@ public class Test01SimpleJob {
 }
 ```
 
+### job 相关说明
+
+quartz 使用生成者模式构建代码,JobDetail,Trigger 分别使用JobBuilder,TriggerBuilder来创建.针对Job而言,源码可以主要看 JobBuilder 的build方法
+
 ```java
-@Slf4j
-public class SimpleJob implements Job {
-    @Override
-    public void execute(JobExecutionContext context) throws JobExecutionException {
-        log.info("一个简单的任务正在执行中");
+public JobDetail build() {
+        JobDetailImpl job = new JobDetailImpl();
+        
+        job.setJobClass(jobClass);
+        job.setDescription(description);
+        if(key == null)
+            key = new JobKey(Key.createUniqueName(null), null);
+        job.setKey(key); 
+        job.setDurability(durability);
+        job.setRequestsRecovery(shouldRecover);
+       
+        if(!jobDataMap.isEmpty())
+            job.setJobDataMap(jobDataMap);
+        return job;
     }
-}
 ```
+
+在这里主要是对JobDetail的实现类进行实例化,JobBuilder在生成JobDetail时,就是在为其赋值.JobDetail部分源码如下:
+
+```java
+
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
