--- a/quartz/2.md
+++ b/quartz/2.md
@@ -1,5 +1,39 @@
 ## spring框架整合quartz
 
+### @Scheduled
+
+spring下 spring-context-support有两个定时任务的注解,@EnableScheduling和@Scheduled,使用方式很简单
+
+#### 1. spring可扫描到的地方增加EnableScheduling
+
+```java
+@SpringBootApplication
+@MapperScan("com.hsm.quartztask.mapper")
+@EnableScheduling
+public class QuartzTaskApplication {
+    public static void main(String[] args) {
+        SpringApplication.run(QuartzTaskApplication.class, args);
+    }
+}
+```
+
+#### 2. 编写方法,在方法体上增加@Scheduled
+
+```java
+@Slf4j
+@Component
+public class ScheduledDemo {
+    @Scheduled(cron = "*/5 * * * * ? ")
+    void init() {
+        log.info("spring 自己的简单定时任务");
+    }
+}
+```
+
+Scheduled属性详情可以查看以下源码
+
+## Spring 整合quartz
+
 [quartz介绍]("https://my.oschina.net/u/4160362/blog/4277640")
 
 spring-boot-starter-quartz 项目源码中没有任何代码,在pom文件中可以看到
