--- a/设计模式/代理模式.md
+++ b/设计模式/代理模式.md
@@ -159,6 +159,19 @@ public class Main {
 
 ### 3.3 cglib代理
 
+#### pom文件
+
+```xml
+ <!-- https://mvnrepository.com/artifact/cglib/cglib -->
+<dependency>
+    <groupId>cglib</groupId>
+    <artifactId>cglib</artifactId>
+    <version>3.3.0</version>
+</dependency>
+```
+
+
+
 #### 3.3.1 实现类
 
 可以不继承接口
@@ -200,12 +213,3 @@ public class TimeProxy implements MethodInterceptor {
     }
 }
 ```
-
-
-
-
-
-
-
-
-
